<resources>
    <string name="app_name">Insta Save</string>
    <string name="murphyspider">murphyspider</string>
    <string name="continue_without_login">Continue without login</string>
    <string name="login_to_instagram">Login with instagram</string>
    <string name="developed_by_murphy_apps">Developed by Murphy Apps</string>
    <string name="need_help">Help</string>
    <string name="my_account">My Account</string>
    <string name="about_app">About app</string>
    <string name="logout">Logout</string>
    <string name="url_to_profile_or_post">URL to profile or post</string>
    <string name="how_to">How to use?</string>
    <string name="preview">Preview</string>
    <string name="download">Download</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="biography">Biography👇\n</string>
    <string name="caption">Caption👇</string>
    <string name="copy_bio">Copy bio</string>
    <string name="copy_caption">Copy caption</string>
    <string name="please_wait">Please wait</string>
    <string name="copied">Biography copied</string>
    <string name="example_username_instagram">Example username: instagram</string>
    <string name="save_posts">Posts</string>
    <string name="save_story">Story</string>
    <string name="save_highlight">Highlight</string>
    <string name="enter_url">Please enter a URL!</string>
    <string name="invalid_url">Please enter a valid URL!</string>
    <string name="story_download">To download stories or profile, enter target USERNAME or profile URL in below box</string>
    <string name="username">Username</string>
    <string name="post_download">To download posts, copy its URL in below box</string>
    <string name="enter_username">Enter a username!</string>
    <string name="downloading">Downloading...</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="login_notice">Due to the limitations of Instagram, you must first log in to your account to download content. Please note that you log in to your account through the official Instagram website, and the application or no one else has access to your login information. !! If your VPN is on please turn it off first !!</string>
    <string name="login_notice_title">Please read!</string>
    <string name="login_accept">Ok, got it!</string>
    <string name="redirect_message">Redirecting to instagram</string>
    <string name="check_permission">Insta Save needs storage permission to saved downloaded media in your device, please grant access.</string>
    <string name="accept_permission">Got it</string>
    <string name="title_permission">Please read!</string>
    <string name="paste">Paste</string>
    <string name="login_dialog" />
    <string name="agree_dialog" />
    <string name="deny_dialog" />
    <string name="login_info" />
</resources>