<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/dl_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:background="@drawable/bg_notice"
            android:drawableStart="@drawable/ic_important"
            android:drawablePadding="@dimen/small_margin"
            android:drawableTint="@color/orange"
            android:padding="@dimen/normal_margin"
            android:text="@string/story_download"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_username_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:background="@drawable/bg_edittext"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="@dimen/normal_margin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_download_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:minHeight="48dp"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_font"
            android:textStyle="bold"
            app:icon="@drawable/ic_download"
            app:iconGravity="textEnd" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_bio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_weight="4"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_copy_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:minHeight="48dp"
                android:text="@string/copy_bio"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold"
                app:icon="@drawable/ic_copy"
                app:iconGravity="textEnd" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>